chore: scss progress and modules

--- a/src/modules/main/components/main-layouts/main-layouts.component.html
+++ b/src/modules/main/components/main-layouts/main-layouts.component.html
@@ -1,1 +1,10 @@
-<p>main-layouts works!</p>
+<div class="main-container">
+
+  <!-- <router-outlet></router-outlet>-->
+  <!-- <router-outlet></router-outlet>-->
+  <!-- <router-outlet></router-outlet> -->
+
+  <app-home-page></app-home-page>
+  <app-profile-dashboard></app-profile-dashboard>
+</div>
+
