chore: progess menu page

--- a/src/modules/main/components/home-page/home-page.component.html
+++ b/src/modules/main/components/home-page/home-page.component.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<div class="home">
+    <div class="home__left">
+        Home page works!
+    </div>
+    <app-profile-dashboard></app-profile-dashboard>
+</div>
