--- a/src/modules/menu/components/navigation-menu-item/navigation-menu-item.component.html
+++ b/src/modules/menu/components/navigation-menu-item/navigation-menu-item.component.html
@@ -1,1 +1,3 @@
-<p>navigation-menu-item works!</p>
+<li class="menu__nav-list-item" (click)="navigate()" [ngStyle]="{background: 'url(assets/images/icons/menu/' + img + ') no-repeat'}">
+
+</li>
