--- a/src/modules/user/components/profile-dashboard/profile-dashboard.component.html
+++ b/src/modules/user/components/profile-dashboard/profile-dashboard.component.html
@@ -1,5 +1,7 @@
-<div class="profile">
+<section class="profile">
     <h2 class="profile__title">
         My Profile
     </h2>
-</div>
+    <app-user-info></app-user-info>
+    <app-user-list-achievements></app-user-list-achievements>
+</section>
