--- a/src/modules/user/components/user-list-achievements/user-list-achievements.component.html
+++ b/src/modules/user/components/user-list-achievements/user-list-achievements.component.html
@@ -1,1 +1,9 @@
-<p>user-list-achievements works!</p>
+<div class="achievements">
+    <div class="achievements__top">
+        <h2 class="achievements__title">
+            Latest achievements
+        </h2>
+        <a href="#" class="achievements__btn">See All</a>        
+    </div>
+    <app-user-list-achievements-item></app-user-list-achievements-item>
+</div>
