--- a/src/modules/main/components/main-layouts/main-layouts.component.html
+++ b/src/modules/main/components/main-layouts/main-layouts.component.html
@@ -1,10 +1,3 @@
-<div class="main-container">
-
-  <!-- <router-outlet></router-outlet>-->
-  <!-- <router-outlet></router-outlet>-->
-  <!-- <router-outlet></router-outlet> -->
-
-  <app-home-page></app-home-page>
-  <app-profile-dashboard></app-profile-dashboard>
+<div class="main__container">
+    <router-outlet></router-outlet>
 </div>
-
