--- a/src/modules/main/components/main-layouts/main-layouts.component.scss
+++ b/src/modules/main/components/main-layouts/main-layouts.component.scss
@@ -1,5 +1,3 @@
-.main-container {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+.main__container {
+    padding: 0 0 0 35px;
 }
