--- a/src/modules/user/components/user-info/user-info.component.html
+++ b/src/modules/user/components/user-info/user-info.component.html
@@ -1,1 +1,20 @@
-<p>user-info works!</p>
+<div class="info">
+    <div class="info__avatar">
+        <img src="assets/images/avatar.png" alt="" class="info__avatar-img" loading="lazy">
+    </div>
+    <div class="info__name">
+        Wegana
+    </div>
+    <div class="info__statistics">
+        <div class="info__statistics-cards">
+            <div class="info__statistics-cards-item" *ngFor="let user of usersStatistics; let i = index">
+                <div class="info__statistics-cards-item-border">
+                    {{ user[1] }}
+                </div>
+                <div class="info__statistics-cards-item-name">
+                    {{ user[0] }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
