--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,8 @@ $mainColors: (
   'bg': #0b0d21,
   'main': #161a42,
   'secondary': #da22ff,
+  'third': #3461FF,
+  'achievementBg': #212760,
   'linkColor': #5eead4,
   'linkColorHover': #fafafb,
   'textColor': #e2e4e9,
