--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
+@import '~normalize.css';
+@import './custom-reset';
 @import './mixin';
 @import './variables';
 @import './fonts';
-@import '~normalize.css';
