chore: add slider

--- a/src/modules/main/components/home-page/home-page.component.html
+++ b/src/modules/main/components/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="home">
     <div class="home__left">
-        Home page works!
+        <app-slider-top-users></app-slider-top-users>
     </div>
     <app-profile-dashboard></app-profile-dashboard>
 </div>
