chore: add slider

--- a/src/modules/achievements/achievements-list-item/achievements-list-item.component.html
+++ b/src/modules/achievements/achievements-list-item/achievements-list-item.component.html
@@ -1,1 +1,9 @@
-<p>achievements-list-item works!</p>
+<div class="home__achievements-cards-item">
+    <div class="home__achievements-cards-item-like">
+        <span class="home__achievements-cards-item-like-span">999</span>
+    </div>
+    <img src="assets/images/achievement-home-1.jpg" alt="img" class="home__achievements-cards-item-img">
+    <div class="home__achievements-cards-item-name">
+        Example
+    </div>
+</div>
