--- a/src/modules/main/components/home-page/home-page.component.html
+++ b/src/modules/main/components/home-page/home-page.component.html
@@ -1,6 +1,11 @@
 <div class="home">
     <div class="home__left">
+        <h2 class="title">⭐ Top users</h2>
         <app-slider-top-users></app-slider-top-users>
+        <h2 class="title">🔥 Hot Bids</h2>
+        <app-achievements-list></app-achievements-list>
+        <h2 class="title">🔥 Hot Bids</h2>
+        <app-achievements-list></app-achievements-list>
     </div>
     <app-profile-dashboard></app-profile-dashboard>
 </div>
