--- a/src/modules/main/components/home-page/home-page.component.scss
+++ b/src/modules/main/components/home-page/home-page.component.scss
@@ -2,7 +2,9 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     &__left {
-        padding: 80px 0;
-        padding-right: 35px;
+        padding: 80px 35px;
+    }
+    .title {
+        margin-bottom: 20px;
     }
 }
