--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,10 @@
 @import '~normalize.css';
 @import './custom-reset';
+@import 'swiper/scss';
+@import 'swiper/scss/navigation';
+@import 'swiper/scss/pagination';
+@import "swiper/scss/scrollbar";
+@import "swiper/scss/mousewheel";
 @import './mixin';
 @import './variables';
 @import './fonts';
