--- a/src/modules/achievements/achievements-list/achievements-list.component.html
+++ b/src/modules/achievements/achievements-list/achievements-list.component.html
@@ -1,1 +1,10 @@
-<p>achievements-list works!</p>
+<div class="home__achievements">
+    <div class="home__achievements-cards">
+        <app-achievements-list-item></app-achievements-list-item>
+        <app-achievements-list-item></app-achievements-list-item>
+        <app-achievements-list-item></app-achievements-list-item>
+        <app-achievements-list-item></app-achievements-list-item>
+        <app-achievements-list-item></app-achievements-list-item>
+        <app-achievements-list-item></app-achievements-list-item>
+    </div>
+</div>
