--- a/src/modules/top-users/components/slider-top-users/slider-top-users.component.html
+++ b/src/modules/top-users/components/slider-top-users/slider-top-users.component.html
@@ -1,1 +1,95 @@
-<p>slider-top-users works!</p>
+<swiper
+    [scrollbar]="{
+      hide: true
+    }"
+    [mousewheel]="{
+
+    }"
+    class="mySwiper"
+  >
+    <ng-template swiperSlide>
+      <div class="slider__slide">
+          <div class="slider__slide-item">
+              <div class="slider__slide-item-img">
+                  <img src="assets/images/ava-user-1.jpg" alt="img-slide">
+              </div>
+              <div class="slider__slide-item-desc">
+                  <div class="slider__slide-item-desc-name">
+                      @dicar
+                  </div>
+                  <div class="slider__slide-item-desc-value">
+                      1000
+                  </div>
+              </div>
+          </div>      
+          <div class="slider__slide-item">
+              <div class="slider__slide-item-img">
+                  <img src="assets/images/ava-user-1.jpg" alt="img-slide">
+              </div>
+              <div class="slider__slide-item-desc">
+                  <div class="slider__slide-item-desc-name">
+                      @dicar
+                  </div>
+                  <div class="slider__slide-item-desc-value">
+                      1000
+                  </div>
+              </div>
+          </div>      
+          <div class="slider__slide-item">
+              <div class="slider__slide-item-img">
+                  <img src="assets/images/ava-user-1.jpg" alt="img-slide">
+              </div>
+              <div class="slider__slide-item-desc">
+                  <div class="slider__slide-item-desc-name">
+                      @dicar
+                  </div>
+                  <div class="slider__slide-item-desc-value">
+                      1000
+                  </div>
+              </div>
+          </div>      
+          <div class="slider__slide-item">
+              <div class="slider__slide-item-img">
+                  <img src="assets/images/ava-user-1.jpg" alt="img-slide">
+              </div>
+              <div class="slider__slide-item-desc">
+                  <div class="slider__slide-item-desc-name">
+                      @dicar
+                  </div>
+                  <div class="slider__slide-item-desc-value">
+                      1000
+                  </div>
+              </div>
+          </div>      
+          <div class="slider__slide-item">
+              <div class="slider__slide-item-img">
+                  <img src="assets/images/ava-user-1.jpg" alt="img-slide">
+              </div>
+              <div class="slider__slide-item-desc">
+                  <div class="slider__slide-item-desc-name">
+                      @dicar
+                  </div>
+                  <div class="slider__slide-item-desc-value">
+                      1000
+                  </div>
+              </div>
+          </div>      
+          <div class="slider__slide-item">
+              <div class="slider__slide-item-img">
+                  <img src="assets/images/ava-user-1.jpg" alt="img-slide">
+              </div>
+              <div class="slider__slide-item-desc">
+                  <div class="slider__slide-item-desc-name">
+                      @dicar
+                  </div>
+                  <div class="slider__slide-item-desc-value">
+                      1000
+                  </div>
+              </div>
+          </div>      
+      </div>
+    </ng-template
+    ><ng-template swiperSlide>Slide 2</ng-template
+    ><ng-template swiperSlide>Slide 3</ng-template
+    ><ng-template swiperSlide>Slide 4</ng-template>
+  </swiper>
