--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,9 @@ a {
         color: var(--mc-linkColorHover);
     }    
 }
+
+.title {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+}
